# mexplainbe4

./: .gitignore  .replit  AGENTS.md  About.md  app.py  bayesian_analysis.py  bootstrap_offline_datasets.py  check_deps.py  codex_prompt.md  codex_update.md  config.yaml  config_loader.py  data_ingestion.py  eta_calculator.py  eta_runner.py  eta_scheduler.py  fastapi_app.py  generate_synthetic.py  gti_pipeline.py  main.py  mesh_http_date.py  mesh_monitor.py  models.py  package-lock.json  package.json  pnpm-lock.yaml  proof_smoke_tests.md  pyproject.toml  replit.md  routes.py  run_demo.py  signal_processing.py  startup.py  test_ntp.py
.github/workflows/: cloudrail.yml
analysis/: phase_persist.py
artifacts/: mesh_history.json  phase_gap_history.json
attached_assets/: Pasted--2025-08-11-12-34-12-0000-9314-INFO-Starting-gunicorn-23-0-0-2025-08-11-12-34-12-0000-931-1754915699089_1754915699089.txt  Pasted--Dependencies-poetry-add-requests-beautifulsoup4-python-dateutil-Ensure-Flask-app-auto-reload-1754720625858_1754720625859.txt  Pasted--Environment-updated-Reloading-shell-2025-08-08-19-04-14-0000-2731-INFO-Starting-gunico-1754679899262_1754679899263.txt  Pasted--Generate-data-run-demo-once-We-ll-execute-the-synthetic-generator-and-the-de-1754657197955_1754657197955.txt  Pasted--mesh-http-date-py-import-os-time-math-socket-ssl-http-client-from-datetime-import-datetime--1754912488044_1754912488046.txt  Pasted--return-self-get-requires-for-build-wheel-config-settings--1754913844781_1754913844782.txt  Pasted--usr-bin-env-python3-bipm-backfill-py-Backfill-phase-gap-history-from-real-BIPM-UTCr-per-la-1754815304600_1754815304600.txt  Pasted-1-Fix-naming-mismatch-in-ingest-tai-data-Right-now-you-call-parse-bimp-data-but-your-parser-is--1754854477130_1754854477130.txt  Pasted-1-requirements-txt-nginx-Copy-Edit-requests-numpy-scipy-2-eta-runner-py-python-Copy-Edit-usr-bi-1754807769051_1754807769051.txt  Pasted-2025-08-09-04-35-06-0000-1098-INFO-Handling-signal-winch-ERROR-app-Exception-on-api-forecas-1754716474103_1754716474103.txt  Pasted-Add-a-helper-to-persist-phase-gap-data-Create-a-new-file-in-your-repository-at-analysis-phase-persis-1754810723349_1754810723350.txt  Pasted-ChatGPT-said-You-re-asking-for-a-real-world-metric-grounded-in-verified-Earth-rotation-and-timekeep-1754657310615_1754657310616.txt  Pasted-Create-or-update-a-helper-to-persist-phase-gap-history-call-this-whenever-you-compute-the-phase-gap-1754810080718_1754810080719.txt  Pasted-Resolved-54-packages-in-3ms-Building-temporal-monitoring-system-file-home-runner-workspace-Buil-1754913961690_1754913961691.txt  Pasted-Summary-of-repository-structure-The-top-level-repo-directory-holds-the-GTI-system-s-Python-modules--1754827146711_1754827146711.txt  Pasted-This-project-is-a-Flask-based-temporal-anomaly-detection-system-primarily-focused-on-Gravitational--1764170681328_1764170681328.txt
data/_meta/: provenance.jsonl
data/bipm/: utcrlab.all
data/gnss/: clock_data.csv
data/pta/: residuals.csv
data/vlbi/: delays.csv
etl/: bimp_backfill.py  bipm_backfill.py  fetch_all.py
instance/: temporal_monitoring.db
migrations/: 0001_init.sql  0002_seed_phase_gap.sql
static/: proof.html
static/css/: custom.css
static/js/: charts.js  dashboard.js
templates/: analysis.html  base.html  configuration.html  dashboard.html  proof.html
temporal_monitoring_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_zero_reset.py
