[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.42",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
]
