
[project]
name = "temporal-monitoring-system"
version = "1.0.0"
description = "Temporal monitoring and analysis system with GTI pipeline"
authors = [
    {name = "Temporal Systems", email = "admin@temporal-systems.dev"}
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.42",
    "psycopg>=3.1.0",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "scikit-learn>=1.7.1",
    "matplotlib>=3.10.5",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
    "email-validator>=2.2.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "app", "routes", "models", "gti_pipeline", "data_ingestion", "signal_processing", "bayesian_analysis", "eta_calculator", "eta_runner", "eta_scheduler", "mesh_monitor", "mesh_http_date", "config_loader", "fastapi_app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "etl*"]
exclude = ["tests*", "logs*", "data*", "static*", "templates*", "artifacts*", "migrations*", "node_modules*", "attached_assets*"]
